@@ -1,5 +1,11 @@
 2/04/2006 Bob Rossi <bob@brasko.net>
 
+	* Makefile.am (cgdb.1): Add rule to generate man pages.
+	(clean-local): Removed.
+	* Makefile.in: Autogenerated.
+
+2/04/2006 Bob Rossi <bob@brasko.net>
+
 	* Makefile.am (dist_man_MANS, EXTRA_DIST): Added.
 	* Makefile.in: Autogenerated.
 
