@@ -1,3 +1,10 @@
+2/04/2006 Bob Rossi <bob@brasko.net>
+
+	* src/Makefile.am (cgdb_SOURCES): Added usage.c.
+	* src/Makefile.in: Autogenerated.
+	* src/cgdb.c (usage): Removed.
+	(#include "usage.h"): Added.
+
 version 0.6.0 (01/30/2006):
 
 1/30/2006 Bob Rossi <bob@brasko.net>
